# cmus

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  browser.c  cmd_declaration.txt  command_mode.c  command_mode.h  config.h.in  debug_wrapper.sh  expr.c  expr.h  filters.c  filters.h  lib.c  lib.h  main.c  misc.c  pinyin_search.c  pinyin_search.h  pl.c  search.c  track_info.c  track_info.h  uchar.c  ui_curses.c  ui_curses.h
scripts/: install_pinyin_deps.sh  pinyin_index.py
